Corrigido Texto de referência de observação. >>tutor funcionando, aluno ainda não